--- a/imagem visual/assets/index.html
+++ b/imagem visual/assets/index.html
@@ -5,16 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="shortcut icon" href="../muadad.png" type="image/x-icon">
+  <link rel="shortcut icon" href="../icons/icon.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>SafeWheels | Estabelecimentos</title>
 </head>
 <body>
   
 <header>
-
-  <h1>SafeWheels</h1>
-
+  <!-- header que contem tudo. Título, caixa de login... -->
+  <a href="index.html" class="tittle-link">
+    <h1 class="header-tittle">SafeWheels</h1>
+  </a>
+  <div class="box-login">
+    <label for="user-login" class="label-login"><a href="login.html" class="login-link">Logar</a></label>
+    <div class="user-box">
+      <a href="login.html" class="login-link"><img src="../icons/user.png" alt="silhueta de uma pessoa" class="user-img" id="user-login"></a>
+    </div>
+  </div>
+  
 </header>
 
 <main>
@@ -24,31 +32,30 @@
 
   <div class="dashboard-top">
 
-    
-
-    <h4 class="tittle-dashboard">Dashboard</h4> <div for="checked-menu" class="bars-background" onclick="retrair()"><i class="fa fa-bars" aria-hidden="true"></i></div>
+    <h4 class="tittle-dashboard" onclick="retrair()">Dashboard</h4> <div for="checked-menu" class="bars-background" onclick="retrair()"><i class="fa fa-bars" aria-hidden="true"></i></div>
   </div>
   
 <ul>
-  <li class="main-item item-list"><a href="" class="esta"> <i class="fa fa-home" aria-hidden="true">
+  <li class="main-item item-list"><a href="#" class="esta"> <i class="fa fa-home" aria-hidden="true">
   </i>
   Home</a>
 </li>
 
   <li class="item-list">
-    <a href="" class="estabe"><i class="fa fa-building" aria-hidden="true"></i>Estabelecimentos</a> 
+    <a href="index.html" class="estabe"><i class="fa fa-building" aria-hidden="true"></i>Estabelecimentos</a> 
   </li>
     <li class="item-list"> <a href="" class="estabele">
       <i class="fa fa-address-card" aria-hidden="true"></i> Cadastrar</li>
     </a>
 </ul>
-
+<p class="copyright">&copy;Copyright SafeWheels</p>
+</nav>
 </div>
 
 <div class="boxing">
 
 <div class="tittle-box">
-  <h4 class="main-tittle">Estabelecimentos/</h4>
+  <h4 class="main-tittle"><i class="fa fa-building" aria-hidden="true" id="fa-tittle"></i>Estabelecimentos/</h4>
   <h4 class="second-tittle"> Tabela</h4>
 </div>
 
@@ -63,33 +70,43 @@
       <tr>
         <th>Nome</th>
         <th>Local</th>
+        <th>Teste</th>
+        <th>Teste</th>
         <th>Ações</th>
-        <th>Teste</th>
-        <th>Teste</th>
       </tr>
     </thead>
     
     <tr>
       <td>Juan</td>
       <td>Minha</td>
-      <td>Ação</td>
       <td>Teste</td>
       <td>Teste</td>
+      <td>
+        <button class="btn-action edit"><ion-icon name="create-outline" class="icon"></ion-icon></button>
+        <button class="btn-action trash"><ion-icon name="trash-outline" class="icon"></ion-icon></button>
+      </td>
     </tr>
 
     <tr>
       <td>Vitório</td>
       <td>Casa</td>
-      <td>Ação</td>
       <td>Teste</td>
-      <td>Teste</td>  
+      <td>Teste</td>
+      <td>
+        <button class="btn-action edit"><ion-icon name="create-outline" class="icon"></ion-icon></button>
+        <button class="btn-action trash"><ion-icon name="trash-outline" class="icon"></ion-icon></button>
+      </td>
     </tr>
 </table>
 
 </div>
+
 </main>
+
 
 
 </body>
 <script src="../js/script.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
