--- a/imagem visual/assets/index.html
+++ b/imagem visual/assets/index.html
@@ -44,8 +44,9 @@
   <li class="item-list">
     <a href="index.html" class="estabe"><i class="fa fa-building" aria-hidden="true"></i>Estabelecimentos</a> 
   </li>
-    <li class="item-list"> <a href="" class="estabele">
-      <i class="fa fa-address-card" aria-hidden="true"></i> Cadastrar</li>
+    <li class="item-list"> 
+    <a href="cadastroEstabelecimento.html" class="estabele">
+      <i class="fa fa-address-card" aria-hidden="true"></i>Cadastrar</li>
     </a>
 </ul>
 <p class="copyright">&copy;Copyright SafeWheels</p>
