--- a/imagem visual/assets/cadastroEstabelecimento.html
+++ b/imagem visual/assets/cadastroEstabelecimento.html
@@ -5,62 +5,104 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
-  <link rel="shortcut icon" href="../muadad.png" type="image/x-icon">
-  <title>SafeWheels | Cadastro de Estabelecimentos</title>
+  <link rel="shortcut icon" href="../icons/icon.png" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <title>SafeWheels | Estabelecimentos</title>
 </head>
 <body>
   
 <header>
-  <div class="tittle">
-  <div class="box">
-    <img src="../muadad.png" alt="logo">
+  <!-- header que contem tudo. Título, caixa de login... -->
+  <a href="index.html" class="tittle-link">
+    <h1 class="header-tittle">SafeWheels</h1>
+  </a>
+  <div class="box-login">
+    <label for="user-login" class="label-login"><a href="login.html" class="login-link">Logar</a></label>
+    <div class="user-box">
+      <a href="login.html" class="login-link"><img src="../icons/user.png" alt="silhueta de uma pessoa" class="user-img" id="user-login"></a>
+    </div>
   </div>
   
-  <h1>SafeWheels</h1>
-</div>
-
-
-<div class="login-box">
-  <a href="login.html" class="logar">Logar</a>
-  <!-- isso aqui só vem quando tiver logado
-  <label for="photo">Nome</label>
-  <div class="photo"><a href="login.html"><img src="icons/user.png" alt="homem perfil"></a></div>
--->
-</div>
-
 </header>
 
 <main>
 
-<div>
+
  <nav class="dashboard">
 
-  <h3>Registrar Local</h3>
+  <div class="dashboard-top">
 
-<ul>
-
-  <a href="">
-    <div class="divider">
-    <li>
-      <a href="index.html">Estabelecimentos</a>
-    </li>
+    <h4 class="tittle-dashboard" onclick="retrair()">Dashboard</h4> <div for="checked-menu" class="bars-background" onclick="retrair()"><i class="fa fa-bars" aria-hidden="true"></i></div>
   </div>
-</a>
+  
+<ul>
+  <li class="main-item item-list"><a href="#" class="esta"> <i class="fa fa-home" aria-hidden="true">
+  </i>
+  Home</a>
+</li>
 
-  <a href=""><div class="divider">    
-      <li><a href="cadastroEstabelecimento.html">Cadastrar Estabelecimento</a></li>  
-  </div></a>
+  <li class="item-list">
+    <a href="index.html" class="estabe"><i class="fa fa-building" aria-hidden="true"></i>Estabelecimentos</a> 
+  </li>
+    <li class="item-list"> 
+    <a href="cadastroEstabelecimento.html" class="estabele">
+      <i class="fa fa-address-card" aria-hidden="true"></i>Cadastrar</li>
+    </a>
+</ul>
+<p class="copyright">&copy;Copyright SafeWheels</p>
+</nav>
 
-</div>
 
 <div class="boxing">
 
-<div class="infos">
+<div class="tittle-box">
+  <h4 class="main-tittle">
+    <i class="fa fa-address-card" aria-hidden="true" id="fa-tittle"></i>Estabelecimentos/
+  </h4>
+  <h4 class="second-tittle"> Cadastrar</h4>
+</div>
+
+<div class="form-cadastro">
+
+  <h4 class="cadastro-tittle">Cadastrar Estabelecimento</h4>
+
+  <form action="" class="form-adicionar">
+
+    
+    <div class="inputs-infos">
+
+
+  <input type="text" class="input" placeholder="Nome do estabalecimento">
+
+  <input type="text" class="input" placeholder="Localização">
+
+  <textarea id="input-area" class="input" cols="30" rows="10" placeholder="Explicação detalhada sobre o estabelecimento..."></textarea>
+
+  <input type="submit" value="Cadastrar">
+  </div>
+
+  <div class="box-imgs">
+    <label for="files">
+      <div class="choose-file">
+        <p class="choose-file-text">Escolha os arquivos</p>
+      </div>
+    </label>
+    
+    <input type="file" id="files" accept="image/*" multiple>
+  </div>
+  
+  </form>
+  
 </div>
 
 </div>
 
 </main>
 
+
+
 </body>
+<script src="../js/script.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </html>
