--- a/imagem visual/assets/index.html
+++ b/imagem visual/assets/index.html
@@ -36,7 +36,7 @@
   </div>
   
 <ul>
-  <li class="main-item item-list"><a href="#" class="esta"> <i class="fa fa-home" aria-hidden="true">
+  <li class="main-item item-list"><a href="home.html" class="esta"> <i class="fa fa-home" aria-hidden="true">
   </i>
   Home</a>
 </li>
