--- a/imagem visual/assets/home.html
+++ b/imagem visual/assets/home.html
@@ -27,19 +27,22 @@
 
 <main>
 
-
  <nav class="dashboard">
 
   <div class="dashboard-top">
 
-    <h4 class="tittle-dashboard" onclick="retrair()">Dashboard</h4> <div for="checked-menu" class="bars-background" onclick="retrair()"><i class="fa fa-bars" aria-hidden="true"></i></div>
+    <h4 class="tittle-dashboard" onclick="retrair()">Dashboard</h4> 
+    <div for="checked-menu" class="bars-background" onclick="retrair()">
+      <i class="fa fa-bars" aria-hidden="true"></i>
+    </div>
   </div>
   
 <ul>
-  <li class="main-item item-list"><a href="home.html" class="esta"> <i class="fa fa-home" aria-hidden="true">
-  </i>
-  Home</a>
-</li>
+  <li class="main-item item-list">
+    <a href="home.html" class="esta"> 
+      <i class="fa fa-home" aria-hidden="true"></i> Home
+    </a>
+  </li>
 
   <li class="item-list">
     <a href="index.html" class="estabe"><i class="fa fa-building" aria-hidden="true"></i>Estabelecimentos</a> 
@@ -56,49 +59,17 @@
 <div class="boxing">
 
 <div class="tittle-box">
-  <h4 class="main-tittle">
-    <i class="fa fa-address-card" aria-hidden="true" id="fa-tittle"></i>Cadastrar/
-  </h4>
-  <h4 class="second-tittle"> Estabelecimento</h4>
+  <h4 class="main-tittle"><i class="fa fa-building" aria-hidden="true" id="fa-tittle"></i>Home/</h4>
+  <h4 class="second-tittle"> Bem vindo!</h4>
 </div>
 
-<div class="form-cadastro">
-
-  <h4 class="cadastro-tittle">Cadastrar Estabelecimento</h4>
-
-  <form action="" class="form-adicionar">
-
-    
-    <div class="inputs-infos">
-
-
-  <input type="text" class="input" placeholder="Nome do estabalecimento">
-
-  <input type="text" class="input" placeholder="Localização">
-
-  <textarea id="input-area" class="input" cols="30" rows="10" placeholder="Explicação detalhada sobre o estabelecimento..."></textarea>
-
-  <input type="submit" value="Cadastrar">
-  </div>
-
-  <div class="box-imgs">
-    <label for="files">
-      <div class="choose-file">
-        <p class="choose-file-text">Escolha os arquivos</p>
-      </div>
-    </label>
-    
-    <input type="file" id="files" accept="image/*" multiple>
-  </div>
-  
-  </form>
-  
+<div class="home-info">
+  <h4 class="box-tittle">Seja bem vindo</h4>
 </div>
 
 </div>
 
 </main>
-
 
 
 </body>
