--- a/imagem visual/assets/detalhesEstabelecimentos.html
+++ b/imagem visual/assets/detalhesEstabelecimentos.html
@@ -64,58 +64,60 @@
 
     <div class="boxing">
 
-      <div class="tittle-box">
-        <h4 class="main-tittle"><i class="fa fa-building" aria-hidden="true" id="fa-tittle"></i>Estabelecimentos/</h4>
-        <h4 class="second-tittle"> Tabela</h4>
+      <div class="detail-box">
+
+        <h3 class="detail-tittle">Nome Estabelecimento</h3>
+
+        <div class="side-side">
+          <div class="part-one">
+            <div class="detail-img-box">
+              <ion-icon name="arrow-back-outline" class="seta"></ion-icon>
+              <div class="detail-img-center"></div>
+              <ion-icon name="arrow-forward-outline" class="seta"></ion-icon>
+            </div>
+
+            <div class="detail-infos">
+              <div class="label-detail">
+                <label class="label-text-detail">Localização:</label>
+                <div class="detail-text-box">
+                  <p class="detail-text">Minha rua</p>
+                </div>
+              </div>
+
+              <div class="label-detail">
+                <label class="label-text-detail">Horários:</label>
+                <div class="detail-text-box">
+                  <p class="detail-text">O dia todo</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="part-two">
+            <div class="map-box">
+              <iframe class="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31715.654134321725!2d-37.10443503749461!3d-6.463672107868202!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7afed967d8e39a1%3A0xa3ea45eaea46de3b!2zQ2FpY8OzLCBSTiwgNTkzMDAtMDAw!5e0!3m2!1spt-BR!2sbr!4v1665953424920!5m2!1spt-BR!2sbr"
+                width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+            <div class="area-infos">
+              <label for="" class="label-text-detail">Informações:</label>
+              <div class="local-infos">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore rem necessitatibus tempora deleniti
+                  est
+                  quaerat obcaecati quas praesentium, eveniet earum beatae, a libero illo quidem corporis, sed esse
+                  placeat nesciunt.</p>
+              </div>
+            </div>
+
+
+          </div>
+
+        </div>
+
+
+
       </div>
-
-      <div class="infos">
-
-        <h4 class="box-tittle">Estabelecimentos Adaptados</h4>
-
-      </div>
-
-      <table>
-        <thead>
-          <tr>
-            <th>Nome</th>
-            <th>Local</th>
-            <th>Teste</th>
-            <th>Teste</th>
-            <th>Ações</th>
-          </tr>
-        </thead>
-
-        <tr>
-          <td><a href="detalhesEstabelecimentos.html" class="detail-link">Juan</a></td>
-          <td>Minha</td>
-          <td>Teste</td>
-          <td>Teste</td>
-          <td>
-            <button class="btn-action edit">
-              <ion-icon name="create-outline" class="icon"></ion-icon>
-            </button>
-            <button class="btn-action trash">
-              <ion-icon name="trash-outline" class="icon"></ion-icon>
-            </button>
-          </td>
-        </tr>
-
-        <tr>
-          <td><a href="detalhesEstabelecimentos.html" class="detail-link">Vitório</a></td>
-          <td>Casa</td>
-          <td>Teste</td>
-          <td>Teste</td>
-          <td>
-            <button class="btn-action edit">
-              <ion-icon name="create-outline" class="icon"></ion-icon>
-            </button>
-            <button class="btn-action trash">
-              <ion-icon name="trash-outline" class="icon"></ion-icon>
-            </button>
-          </td>
-        </tr>
-      </table>
 
     </div>
 
