--- a/imagem visual/assets/cadastroEstabelecimento.html
+++ b/imagem visual/assets/cadastroEstabelecimento.html
@@ -1,103 +1,112 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/style.css">
   <link rel="shortcut icon" href="../icons/icon.png" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>SafeWheels | Estabelecimentos</title>
 </head>
+
 <body>
-  
-<header>
-  <!-- header que contem tudo. Título, caixa de login... -->
-  <a href="index.html" class="tittle-link">
-    <h1 class="header-tittle">SafeWheels</h1>
-  </a>
-  <div class="box-login">
-    <label for="user-login" class="label-login"><a href="login.html" class="login-link">Logar</a></label>
-    <div class="user-box">
-      <a href="login.html" class="login-link"><img src="../icons/user.png" alt="silhueta de uma pessoa" class="user-img" id="user-login"></a>
-    </div>
-  </div>
-  
-</header>
 
-<main>
-
-
- <nav class="dashboard">
-
-  <div class="dashboard-top">
-
-    <h4 class="tittle-dashboard" onclick="retrair()">Dashboard</h4> <div for="checked-menu" class="bars-background" onclick="retrair()"><i class="fa fa-bars" aria-hidden="true"></i></div>
-  </div>
-  
-<ul>
-  <li class="main-item item-list"><a href="home.html" class="esta"> <i class="fa fa-home" aria-hidden="true">
-  </i>
-  Home</a>
-</li>
-
-  <li class="item-list">
-    <a href="index.html" class="estabe"><i class="fa fa-building" aria-hidden="true"></i>Estabelecimentos</a> 
-  </li>
-    <li class="item-list"> 
-    <a href="cadastroEstabelecimento.html" class="estabele">
-      <i class="fa fa-address-card" aria-hidden="true"></i>Cadastrar</li>
+  <header>
+    <!-- header que contem tudo. Título, caixa de login... -->
+    <a href="index.html" class="tittle-link">
+      <h1 class="header-tittle">SafeWheels</h1>
     </a>
-</ul>
-<p class="copyright">&copy;Copyright SafeWheels</p>
-</nav>
-
-
-<div class="boxing">
-
-<div class="tittle-box">
-  <h4 class="main-tittle">
-    <i class="fa fa-address-card" aria-hidden="true" id="fa-tittle"></i>Cadastrar/
-  </h4>
-  <h4 class="second-tittle"> Estabelecimento</h4>
-</div>
-
-<div class="form-cadastro">
-
-  <h4 class="cadastro-tittle">Cadastrar Estabelecimento</h4>
-
-  <form action="" class="form-adicionar">
-
-    
-    <div class="inputs-infos">
-
-
-  <input type="text" class="input" placeholder="Nome do estabalecimento">
-
-  <input type="text" class="input" placeholder="Localização">
-
-  <textarea id="input-area" class="input" cols="30" rows="10" placeholder="Explicação detalhada sobre o estabelecimento..."></textarea>
-
-  <input type="submit" value="Cadastrar">
-  </div>
-
-  <div class="box-imgs">
-    <label for="files">
-      <div class="choose-file">
-        <p class="choose-file-text">Escolha os arquivos</p>
+    <div class="box-login">
+      <label for="user-login" class="label-login"><a href="login.html" class="login-link">Logar</a></label>
+      <div class="user-box">
+        <a href="login.html" class="login-link"><img src="../icons/user.png" alt="silhueta de uma pessoa"
+            class="user-img" id="user-login"></a>
       </div>
-    </label>
-    
-    <input type="file" id="files" accept="image/*" multiple>
-  </div>
-  
-  </form>
-  
-</div>
+    </div>
 
-</div>
+  </header>
 
-</main>
+  <main>
+
+
+    <nav class="dashboard">
+
+      <div class="dashboard-top">
+
+        <h4 class="tittle-dashboard" onclick="retrair()">Dashboard</h4>
+        <div for="checked-menu" class="bars-background" onclick="retrair()"><i class="fa fa-bars"
+            aria-hidden="true"></i></div>
+      </div>
+
+      <ul>
+
+        <a href="cadastroEstabelecimento.html" class="estabele">
+          <li class="item-list">
+            <i class="fa fa-address-card" aria-hidden="true"></i>Cadastrar
+          </li>
+        </a>
+
+        <a href="index.html" class="estabe">
+          <li class="item-list">
+            <i class="fa fa-building" aria-hidden="true"></i>Estabelecimentos
+          </li>
+        </a>
+
+      </ul>
+      <p class="copyright">&copy;Copyright SafeWheels</p>
+    </nav>
+
+
+    <div class="boxing">
+
+      <div class="tittle-box">
+        <h4 class="main-tittle">
+          <i class="fa fa-address-card" aria-hidden="true" id="fa-tittle"></i>Cadastrar/
+        </h4>
+        <h4 class="second-tittle"> Estabelecimento</h4>
+      </div>
+
+      <div class="form-cadastro">
+
+        <h4 class="cadastro-tittle">Cadastrar Estabelecimento</h4>
+
+        <form action="" class="form-adicionar">
+
+
+          <div class="inputs-infos">
+
+
+            <input type="text" class="input" placeholder="Nome do estabalecimento">
+
+            <input type="text" class="input" placeholder="Localização">
+
+            <textarea id="input-area" class="input" cols="30" rows="10"
+              placeholder="Explicação detalhada sobre o estabelecimento..."></textarea>
+
+            <input type="submit" value="Cadastrar">
+          </div>
+
+          <div class="box-imgs">
+            <label for="files">
+              <div class="choose-file">
+                <p class="choose-file-text">Escolha os arquivos</p>
+              </div>
+            </label>
+
+            <input type="file" id="files" accept="image/*" multiple>
+          </div>
+
+        </form>
+
+      </div>
+
+    </div>
+
+  </main>
 
 
 
@@ -105,4 +114,5 @@
 <script src="../js/script.js"></script>
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+
 </html>
