--- a/imagem visual/assets/esqueceuSenha.html
+++ b/imagem visual/assets/esqueceuSenha.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
@@ -14,32 +14,24 @@
 <body>
 
   <div class="form form-login">
-    <form action="index.html" class="form-blank">
+    <form action="mudaSenha.html" class="form-blank">
 
       <thead class="div-tittles">
-        <h1 class="form-tittle">Login</h1>
+        <h1 class="form-tittle">Mudar senha</h1>
         <h4 class="second-tittle">SafeWheels</h4>
       </thead>
 
-      <div class="inputs-div">
-        <label for="nome" class="label-form">Nome:</label>
-        <input type="text" class="input-blank" id="nome" required>
-      </div>
-
+      <p class="email-esqueci">Digite seu email para recuperar a senha</p>
 
       <div class="inputs-div">
-        <label for="senha" class="label-form">Senha:</label>
-        <input type="password" class="input-blank" id="senha" required>
+        <label for="nome" class="label-form">Email:</label>
+        <input type="email" class="input-blank" id="email" required>
       </div>
 
       <input type="submit" value="Enviar" class="input-blank" id="input-submit">
-
       <div class="help-links">
-        <a href="esqueceuSenha.html" class="link-help">Esqueceu sua senha?</a>
-        <a href="cadastroUsuario.html" class="link-help">Cadastrar-se</a>
+        <a href="login.html" class="link-help">Voltar</a>
       </div>
-
-
 
     </form>
   </div>
