--- a/imagem visual/assets/mudaSenha.html
+++ b/imagem visual/assets/mudaSenha.html
@@ -1,3 +1,4 @@
+!
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,32 +15,24 @@
 <body>
 
   <div class="form form-login">
-    <form action="index.html" class="form-blank">
 
-      <thead class="div-tittles">
-        <h1 class="form-tittle">Login</h1>
-        <h4 class="second-tittle">SafeWheels</h4>
-      </thead>
+    <h1 class="form-tittle">Nova senha</h1>
 
-      <div class="inputs-div">
-        <label for="nome" class="label-form">Nome:</label>
-        <input type="text" class="input-blank" id="nome" required>
-      </div>
+    <form action="login.html" class="form-blank">
 
+      <p class="email-esqueci">Digite a nova senha</p>
 
       <div class="inputs-div">
         <label for="senha" class="label-form">Senha:</label>
         <input type="password" class="input-blank" id="senha" required>
       </div>
 
-      <input type="submit" value="Enviar" class="input-blank" id="input-submit">
-
-      <div class="help-links">
-        <a href="esqueceuSenha.html" class="link-help">Esqueceu sua senha?</a>
-        <a href="cadastroUsuario.html" class="link-help">Cadastrar-se</a>
+      <div class="inputs-div">
+        <label for="senha" class="label-form">Confirmar senha:</label>
+        <input type="password" class="input-blank" id="senha2" required>
       </div>
 
-
+      <input type="submit" value="Enviar" class="input-blank" id="input-submit">
 
     </form>
   </div>
