parte da responsividade

--- a/imagem visual/assets/index.html
+++ b/imagem visual/assets/index.html
@@ -38,8 +38,7 @@
         <div class="dashboard-top">
 
           <h4 class="tittle-dashboard" onclick="retrair()">Dashboard</h4>
-          <div for="checked-menu" class="bars-background" onclick="retrair()"><i class="fa fa-bars"
-              aria-hidden="true"></i></div>
+          <div class="bars-background" onclick="retrair()"><i class="fa fa-bars" aria-hidden="true"></i></div>
         </div>
 
         <ul>
